--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -3,11 +3,16 @@
     x:Class="Prismanda.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:viewModels="using:Prismanda.ViewModels"
+    x:DataType="viewModels:MainPageViewModel"
     Title="MainPage">
 
     <ScrollView>
         <VerticalStackLayout Padding="30" Spacing="25">
             <Label Text="MainPage" FontSize="40" />
+
+            <Button Command="{Binding ModalNavigationCommand}" Text="Navigation" />
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
