--- a/Views/Page1.xaml
+++ b/Views/Page1.xaml
@@ -3,10 +3,15 @@
     x:Class="Prismanda.Views.Page1"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:viewModels="using:Prismanda.ViewModels"
+    x:DataType="viewModels:Page1ViewModel"
     Title="Page1">
     <ScrollView>
         <VerticalStackLayout Padding="30" Spacing="25">
-            <Label Text="Page1" FontSize="40" />
+            <Label Text="{Binding Title}" FontSize="40" />
+
+            <Button Command="{Binding GoBackCommand}" Text="Go Back" />
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
